<resources>
    <string name="app_name">SedentApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_actividad">Actividad</string>
    <string name="menu_objetivos">Objetivos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Objetivos fragment -->
    <string name="objetivos">Objetivos</string>
    <string name="pasos_titulo">Pasos</string>
    <string name="pasos_unidad">pasos</string>
    <string name="distancia">Distancia</string>
    <string name="km_unidad">Km</string>
    <string name="peso">Peso</string>
    <string name="kg_unidad">Kg</string>
    <string name="tiempoActividad">Tiempo de actividad</string>
    <string name="horas_unidad">h</string>

    <!-- Objetivos dialog -->
    <string name="objetivos_dialog_titulo">Editar objetivo</string>
    <string name="objetivos_dialog_activo">Activo</string>
    <string name="objetivo_generico_dialog">Objetivo</string>

    <!-- preferencias objetivos -->
    <string name="pref_objetivos">pref_objetivos</string>
    <string name="pref_objetivos_pasos">pasos</string>
    <string name="pref_objetivos_distancia">distancia</string>
    <string name="pref_objetivos_peso">peso</string>
    <string name="pref_objetivos_actividad">actividad</string>

    <string name="pref_objetivos_pasos_activo">pasos_activo</string>
    <string name="pref_objetivos_distancia_activo">distancia_activo</string>
    <string name="pref_objetivos_peso_activo">peso_activo</string>
    <string name="pref_objetivos_actividad_activo">actividad_activo</string>


    <!-- Generico -->
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <!-- Actividad fragment -->
    <string name="actividad_no_datos">No existe información.</string>

    <!-- Actividad spinner -->
    <string-array name="spinner_actividad_array">
        <item>Diario</item>
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>

    <!-- Perfil fragment -->
    <string name="nombre_perfil">Nombre Apellido</string>
    <string name="nombre_usuario">Usuario Prueba</string>
    <string name="edad_perfil">Edad: </string>
    <string name="estatura_perfil">Estatura: </string>
    <string name="peso_perfil">Peso: </string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="altura_unidad">cm</string>
    <string name="zancada_perfil">Longitud de zancada:</string>
    <string name="zancada_unidad">cm</string>
    <string name="datos_personales_perfil">Datos personales</string>
    <string name="salir_google">Desconectar</string>
    <string name="facebook_app_id">595917787453039</string>
    <string name="fb_login_protocol_scheme">fb595917787453039</string>

    <!-- Perfil dialog -->
    <string name="perfil_dialog_nombre">Nombre</string>

    <!-- Perfil preferences -->
    <string name="pref_perfil">pref_perfil</string>
    <string name="pref_perfil_nombre">pref_perfil_nombre</string>
    <string name="pref_perfil_edad">pref_perfil_edad</string>
    <string name="pref_perfil_estatura">pref_perfil_estatura</string>
    <string name="pref_perfil_peso">pref_perfil_peso</string>
    <string name="pref_perfil_zancada">pref_perfil_zancada</string>

    <!-- Inicio fragment -->
    <string name="tiempoInactividad">Tiempo de Inactividad</string>

    <!-- About fragment -->
    <string name="app_info">El objetivo de esta aplicación es ayudarlo a monitorizar y controlar el sedentarismo</string>
    <string name="autores_titulo">Autores</string>
    <string name="autores_texto">Información de los autores de la app</string>

    <!-- Ajustes -->

    <!-- valores personalizados -->
    <string name="tiempo_inactividad_titulo_settings">Tiempo de inactividad</string>

    <string-array name="pref_tiempo_inactividad_titulos">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_tiempo_inactividad_valores">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>-1</item>
    </string-array>

    <string name="tiempo_actividad_titulo_settings">Tiempo de actividad</string>

    <string-array name="pref_tiempo_actividad_titulos">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_tiempo_actividad_valores">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>-1</item>
    </string-array>

    <string name="pref_calibrar">Calibración</string>
    <string name="pref_step_calibration">Calibra la longitud de los pasos</string>


    <!-- hasta aqui valores personalizados -->
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Datos y sincronización</string>

    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 minutos</item>
        <item>3 minutos</item>
        <item>6 minutos</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Notificaciones de actividad</string>

    <string name="pref_title_ringtone">Tono de alerta</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrar</string>
    <string name="calibration_description">A continuación puedes mejorar la precisión con la que la aplicación calcula la distancia que haces. Para empezar pulsa el botón. A continuación realiza un recorrido exterior de más de 400 metros y vuelve a pulsar el botón. Listo!!</string>
    <string name="start_calibration_button_text">Empezar</string>
    <string name="end_calibration_button_text">Finalizar</string>
    <string name="calibration_step_text">Calibrar</string>


    <!-- EULA -->
    <string name="eula_titulo">EULA</string>
    <string name="eula_texto">LICENCIA DE USUARIO FINAL PARA EL SOFTWARE ANDROID SEDENTAPP LEA ATENTAMENTE ESTE DOCUMENTO ANTES DE UTILIZAR ESTE SOFTWARE. ESTA LICENCIA OFRECE INFORMACIÓN IMPORTANTE SOBRE EL SOFTWARE, LE PROPORCIONA UNA LICENCIA PARA UTILIZAR EL SOFTWARE Y CONTIENE INFORMACIÓN SOBRE LA GARANTÍA Y LA RESPONSABILIDAD. AL USAR EL SOFTWARE, ACEPTA EL SOFTWARE "TAL CUAL" Y ACEPTA LOS TÉRMINOS DE ESTE ACUERDO DE LICENCIA. EN NINGUNA GARANTÍA, LOS AUTORES SE HARÁN RESPONSABLES POR CUALQUIER DAÑO DERIVADO DEL USO DE ESTE SOFTWARE. SI NO DESEA HACERLO, NO USE EL SOFTWARE. \n

1- Términos de la licencia \n
Esta licencia le permite: (a) usar el software en un solo dispositivo; y Si desea utilizar el Software en más de un dispositivo, debe obtener una licencia de otra copia del Software.
\n
2 - Restricciones de uso \n
A menos que SedentApp lo haya autorizado a distribuir el Software, no deberá realizar ni distribuir copias del Software ni transferir el Software de un dispositivo a otro. No deberá descompilar, aplicar ingeniería inversa, desmontar, incluir en otro software ni traducir el Software, ni utilizar el Software para fines comerciales. No debe modificar, alterar, cambiar o hacer modificaciones al Software ni crear trabajos derivados basados ​​en el Software. No deberá alquilar, arrendar, revender, sublicenciar, asignar, distribuir o transferir de ninguna otra forma el Software o esta licencia. Cualquier intento de hacerlo será nulo y sin efecto.
\n
3 - Propiedad \n
Esta licencia le otorga derechos limitados para usar el Software. El Propietario conserva toda la propiedad, derecho, título e interés en, hacia y del Software y todas las copias del mismo. Todos los derechos no específicamente otorgados en esta licencia, incluidos los derechos de autor nacionales e internacionales, están reservados por el Propietario.
\n
4 - Marcas de propiedad \n
Los logotipos, nombres de productos, manuales, documentación y otros materiales de soporte del propietario están patentados, con derechos de autor, marcas comerciales, constituyen secretos comerciales valiosos (independientemente de si una parte de ellos puede estar protegida por derechos de autor o patentados) o son propiedad exclusiva del propietario. No eliminará ni ocultará los derechos de autor, la marca comercial u otros avisos de propiedad del Propietario de ninguno de los materiales contenidos en este paquete ni se descargarán junto con el Software.
\n
5 - Descargo de garantías y soporte técnico \n
El Software se le proporciona "TAL CUAL", sin ningún tipo de soporte técnico o garantía de ningún tipo, que incluye, sin limitación, cualquier garantía o condición de comerciabilidad, idoneidad para un propósito particular y no infracción.
\n
ALGUNAS JURISDICCIONES NO PERMITEN LA EXCLUSIÓN DE GARANTÍAS IMPLÍCITAS, POR LO QUE LA EXCLUSIÓN ANTERIOR PODRÍA NO APLICARSE A USTED. TAMBIÉN PUEDE TENER OTROS DERECHOS LEGALES QUE VARÍAN DE JURISDICCIÓN A JURISDICCIÓN.</string>

    
    
    <!-- Errores -->
    <string name="texto_vacio">Este campo no pude estar vacío</string>
    
</resources>
