<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_actividad"
            android:title="@string/menu_actividad" />
        <item
            android:id="@+id/nav_objetivos"
            android:title="@string/menu_objetivos" />
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/menu_perfil" />


        <item
            android:id="@+id/nav_ajustes"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/nav_send"
            android:title="@string/menu_acerca_de" />


    </group>
</menu>
